# autoresearch

./: .gitignore  README.md  data.py  download_missing.sh  download_missing.txt  draw_bbox_vindr.py  dummpy_test.py  gpu.sh  prepare.py  preprocess_missing.py  preprocess_no_clahe.py  preprocess_vindr.py  program.md  pyproject.toml  results.tsv  split.json  ssh.md  train.py  wget-log
